Refactor: remove pages always by ID